# chess3d

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  PROJECT_PROMPT.md  README.md  run.bat  run.sh  vcpkg.json
.github/workflows/: ci.yml  release.yml
assets/shaders/: highlight.frag  highlight.vert  lit.frag  lit.vert
cmake/: FetchEngines.cmake
docs/: APRESENTACAO.md  ARQUITETURA.md  capture_screenshots.ps1
packaging/: chess3d.desktop  engines.manifest  make_icon.py
packaging/linux/: build_appimage.sh  fetch_engines.sh
packaging/windows/: resources.rc.in
src/: main.cpp
src/ai/: Agent.h  DifficultyLevels.h  EngineCatalog.cpp  EngineCatalog.h  Evaluator.cpp  Evaluator.h  MinimaxAgent.cpp  MinimaxAgent.h  PieceSquareTables.h  RemoteAgent.cpp  RemoteAgent.h  UciEngineAgent.cpp  UciEngineAgent.h
src/anim/: Animator.cpp  Animator.h  Easing.h
src/app/: Application.cpp  Application.h  GameSession.cpp  GameSession.h  HeadlessRunner.cpp  HeadlessRunner.h  Window.cpp  Window.h
src/chess/: Board.cpp  Board.h  Move.cpp  Move.h  MoveGenerator.cpp  MoveGenerator.h  Notation.cpp  Notation.h  Rules.cpp  Rules.h  Types.h
src/core/: BoardCoords.h
src/input/: InputHandler.cpp  InputHandler.h
src/net/: LanConnection.cpp  LanConnection.h  Protocol.cpp  Protocol.h
src/platform/: AssetPaths.cpp  AssetPaths.h  PayloadBootstrap.cpp  PayloadBootstrap.h
src/render/: Camera.cpp  Camera.h  GltfLoader.cpp  GltfLoader.h  Mesh.cpp  Mesh.h  Picker.cpp  Picker.h  Shader.cpp  Shader.h
src/ui/: GameUi.cpp  GameUi.h
tests/: test_ai.cpp  test_engines.cpp  test_game_flow.cpp  test_lan.cpp  test_movegen.cpp  test_protocol.cpp  test_rules.cpp
tests/scripts/: run_all.ps1  run_all.sh  run_all_lan.py  run_lan_match.py
